# Black-Grimoire

./: .gitignore  Cargo.toml
src/: lib.rs  light.rs  range.rs  timer.rs  utilities.rs
src/ecs/: mod.rs
src/ecs/components/: drawable.rs  health.rs  mod.rs  particle_emitter.rs  rigid_body.rs  text.rs  transformation.rs
src/renderer/: mod.rs  model.rs  model_manager.rs  shader_manager.rs  texture_manager.rs
