[package]
name = "Grimoire"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["David Bengtsson <david@witchcult.se>"]
description = "A simple game engine"

[lib]
name = "grimoire"
path = "src/lib.rs"

[dependencies]
rgb = "*"
lodepng ="*"
glutin = "*"
gl = "*"
libc = "*"
fnv = "*"
gameprng = "*"
gamemath = "*"
