[package]
name = "black_grimoire"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["David Bengtsson <david@witchcult.se>"]
description = "A simple game engine"

[lib]
name = "black_grimoire"
path = "src/lib.rs"

[dependencies]
rgb = "0.8.36"
lodepng = "3.7.2"
glutin = "0.30.9"
gl = "0.14.0"
libc = "0.2.147"
fnv = "1.0.7"
gameprng = "0.1.0"
gamemath = "0.4.0"
